[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"
authors = ["Miracle.S.Neko <awpmsnsoft-wgse@msneko.icu>"]
license = "MIT OR Apache-2.0"
readme = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "wgse_kernel"
path = "src/lib.rs"
crate-type = ["staticlib"]

[[bin]]
name = "wgse_kernel_bin"
path = "src/main.rs"
doc = false

[features]
meta_init = []

[dependencies]
anyhow = "1.0.75"
enum_dispatch = "0.3.12"
meta_collect = { path = "./src/utils/meta_collect", optional = true }
meta_gen = { path = "./src/utils/meta_gen" }
