[package]
name = "meta_collect"
version = "1.0.0"
edition = "2021"
authors = ["Miracle.S.Neko <awpmsnsoft-wgse@msneko.icu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.37", features = ["full", "parsing", "extra-traits"] }
quote = "1.0.32"
proc-macro2 = "1.0.66"

anyhow = "1.0.74"
convert_case = "0.6.0"
if_chain = "1.0.2"
serde_json = "1.0.104"
base64 = "0.21.2"
